--- a/_assets/main.css
+++ b/_assets/main.css
@@ -5,6 +5,28 @@ body {
   margin: 0;
 }
 
+section {
+  max-width: 800px;
+  margin: 2em auto;
+}
+
+/*
+Content elements
+*/
+
+ul {
+  padding-left: 1.5em;
+}
+
+p, li {
+  line-height: 1.3em; margin: 0 0 1em;
+}
+
+p.subtext {
+  font-size: 0.9em;
+  font-style: italic;
+}
+
 pre {
   display: block;
   background: #e8f1fd;
@@ -42,26 +64,51 @@ blockquote.badnews {
 
 blockquote.goodnews {
   border-left-color: green;
-  background-color: #e9ffd9
+  background-color: #e9ffd9;
 }
 
-section {
-  max-width: 800px;
-  margin: 2em auto;
+/*
+Forms
+*/
+
+form {
+  display: block;
+  margin: 2em 0;
 }
 
-ul {
-  padding-left: 1.5em;
+label {
+  display: block;
+  font-size: 0.8em;
+  font-weight: bold;
+  margin-bottom: 0.25em;
 }
 
-p, li {
-  line-height: 1.3em; margin: 0 0 1em;
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+  display: block;
+  padding: 0.25em;
+  border-radius: 2px;
+  border: 1px solid #e1e1e1;
+  font-size: 1.25em;
+  width: 90%;
+  max-width: 20em;
+  line-height: 1;
 }
 
-p.subtext {
-  font-size: 0.9em;
-  font-style: italic;
+input[type="submit"] {
+  font-size: 1em;
+  font-weight: bold;
+  border: 0;
+  padding: 0;
+  color: #0000EE;
+  cursor: pointer;
+  text-decoration: underline;
 }
+
+/*
+Footer
+*/
 
 footer {
   padding-top: 3em;
